Updating spacing of incident displays on the results page. Also fixing filtering for WeatherUndergroundIncidents

--- a/CapstoneWeatherDashboard/Content/WeatherIncident.css
+++ b/CapstoneWeatherDashboard/Content/WeatherIncident.css
@@ -41,11 +41,13 @@ tr
 .date
 {
     float: left;
+    clear:left;
 }
 
 .eventType
 {
-    text-align: center;
+    float: left;
+    padding-left: 30%;
 }
 
 .map 
